2004-06-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pxx/cursor, include/pqxx/cursor.hxx:
  - New
  - Early work on new iterator/container-style cursor interface
 include/pqxx/cursor.h:
  - Renamed guard macro to PQXX_OLD_CURSOR_H
 include/pqxx/Makefile.am:
  - Added new cursor, cursor.hxx
 src/cursor.cxx:
  - Now contains new-style cursor code
 src/oldcursor.cxx:
  - New
  - Holds obsolete Cursor code
2004-06-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, test/test000.cxx:
  - string conversions for std::stringstream
 test/test005.cxx, test/test006.cxx:
  - Added rows ending in empty-string fields, thanks slava@perlx.com
2004-06-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction_base.hxx:
  - Removed erroneous "throw ()" for EndCopyWrite(), thanks Simon Elbaz
  - Experimental version of exec() taking a stringstream
 src/connection_base.cxx:
  - Trimmed some fat, possible bug out of EndCopyWrite()
 src/result.cxx:
  - Accepts null query string
 src/tablestream.cxx:
  - Made base_close() idempotent, or at least more obviously so
2004-05-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, include/pqxx/result.hxx, src/util.cxx:
  - Workarounds for the infamous non-release "gcc 2.96", thanks Arjen Baart
 libpqxx.spec.in:
  - Added --enable-shared (Arjen Baart)
2004-05-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Strip newlines off COPY TO STDOUT lines in old-libpq code
 src/tablereader.cxx:
  - Fix parse error when line ends in empty field.  Thanks slava@perlx.com!
2004-05-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/pipeline.hxx, src/pipeline.cxx:
  - Made prepended "SELECT 0" query explicit to pave way for partial retrieval
  - Syntax error reporting tries to narrow down problematic query
 include/pqxx/tablestream.hxx:
  - Made columnlist() use new separated_list()
 include/pqxx/util.hxx:
  - New class template items<> to make container initialization easy